Fixed bug #26814 (On parse error include included file, terminate execution script).